generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id                 String             @id @default(cuid())
  username           String             @unique
  password           String
  name               String?
  role               UserRole           @default(USER)
  createdAt          DateTime           @default(now())
  updatedAt          DateTime           @updatedAt
  avatar             String?
  email              String             @unique
  usernameHash       String?            @unique
  emailHash          String?            @unique
  isActive           Boolean            @default(true)
  lastLogin          DateTime?
  resetPasswordOtp   String?
  resetPasswordExpires DateTime?
  apiLogs            ApiLog[]
  auditLogs          AuditLog[]
  automationActions  AutomationAction[]
  notifications      Notification[]
  novaInsights       NovaInsight[]
  projectMemberships ProjectMember[]
  managedProjects    Project[]          @relation("ProjectManager")
  savedFilters       SavedFilter[]
  taskComments       TaskComment[]
  taskHistory        TaskHistory[]
  taskRelations      TaskRelation[]
  taskTemplates      TaskTemplate[]
  assignedTasks      Task[]             @relation("TaskAssignee")
  createdTasks       Task[]             @relation("TaskCreator")
  aiPreference       UserAIPreference?
  rateLimit          UserRateLimit?
  workLogs           WorkLog[]

  @@map("users")
}

model Project {
  id               String           @id @default(cuid())
  name             String
  description      String?
  managerId        String
  isActive         Boolean          @default(true)
  startDate        DateTime?
  endDate          DateTime?
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  totalBudget      Float            @default(0)
  budgetCategories BudgetCategory[]
  notifications    Notification[]
  novaInsights     NovaInsight[]
  members          ProjectMember[]
  manager          User             @relation("ProjectManager", fields: [managerId], references: [id])
  savedFilters     SavedFilter[]
  taskTemplates    TaskTemplate[]
  tasks            Task[]

  @@index([name])
  @@index([description])
  @@map("projects")
}

model BudgetCategory {
  id        String          @id @default(cuid())
  name      String
  allocated Float           @default(0)
  color     String
  projectId String
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt
  project   Project         @relation(fields: [projectId], references: [id], onDelete: Cascade)
  expenses  BudgetExpense[]

  @@map("budget_categories")
}

model BudgetExpense {
  id          String         @id @default(cuid())
  description String
  amount      Float
  date        DateTime       @default(now())
  categoryId  String
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  category    BudgetCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@map("budget_expenses")
}

model ProjectMember {
  id        String   @id @default(cuid())
  projectId String
  userId    String
  joinedAt  DateTime @default(now())
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
  @@index([userId])
  @@map("project_members")
}

model Task {
  id                String             @id @default(cuid())
  title             String
  description       String?
  status            TaskStatus         @default(PENDING)
  priority          TaskPriority       @default(MEDIUM)
  projectId         String
  createdById       String
  assigneeId        String?
  dueDate           DateTime?
  completedAt       DateTime?
  position          Int                @default(0)
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  startDate         DateTime?
  timeRemaining     Int?
  timeSpent         Int                @default(0)
  isOverdue         Boolean            @default(false)
  lastActivity      DateTime           @default(now())
  priorityScore     Int                @default(0)
  riskLevel         TaskRiskLevel      @default(LOW)
  sourceRelations   TaskRelation[]     @relation("SourceRelations")
  targetRelations   TaskRelation[]     @relation("TargetRelations")
  assignee          User?              @relation("TaskAssignee", fields: [assigneeId], references: [id])
  createdBy         User               @relation("TaskCreator", fields: [createdById], references: [id])
  project           Project            @relation(fields: [projectId], references: [id], onDelete: Cascade)
  workLogs          WorkLog[]
  comments          TaskComment[]
  notifications     Notification[]
  history           TaskHistory[]
  insights          NovaInsight[]
  predictions       TaskPrediction[]
  automationActions AutomationAction[]
  proofAttachment       String?
  proofAttachments      String[]  @default([])
  additionalAssigneeIds String[]  @default([])


  @@index([title])
  @@index([description])
  @@index([status])
  @@index([assigneeId])
  @@index([projectId])
  @@index([priority])
  @@index([dueDate])
  @@map("tasks")
}

model WorkLog {
  id          String   @id @default(cuid())
  timeSpent   Int
  startedAt   DateTime @default(now())
  description String?
  taskId      String
  userId      String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  task        Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user        User     @relation(fields: [userId], references: [id])

  @@index([taskId])
  @@index([userId])
  @@map("work_logs")
}

model TaskComment {
  id        String   @id @default(cuid())
  content   String
  taskId    String
  authorId  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  author    User     @relation(fields: [authorId], references: [id])
  task      Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@map("task_comments")
}


model Notification {
  id        String           @id @default(cuid())
  type      NotificationType
  title     String
  message   String
  userId    String
  taskId    String?
  projectId String?
  isRead    Boolean          @default(false)
  createdAt DateTime         @default(now())
  updatedAt DateTime         @updatedAt
  project   Project?         @relation(fields: [projectId], references: [id], onDelete: Cascade)
  task      Task?            @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user      User             @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isRead])
  @@index([userId])
  @@map("notifications")
}

model ApiLog {
  id           String   @id @default(cuid())
  userId       String?
  username     String?
  endpoint     String
  method       String
  statusCode   Int
  responseTime Int
  userAgent    String?
  ipAddress    String?
  timestamp    DateTime @default(now())
  user         User?    @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([endpoint])
  @@index([timestamp])
  @@map("api_logs")
}

model RateLimitConfig {
  id        String   @id @default(cuid())
  role      UserRole @unique
  limit     Int
  window    Int      @default(3600)
  enabled   Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("rate_limit_configs")
}

model UserRateLimit {
  id        String   @id @default(cuid())
  userId    String   @unique
  limit     Int
  window    Int      @default(3600)
  enabled   Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_rate_limits")
}

model EndpointRateLimit {
  id        String   @id @default(cuid())
  endpoint  String
  method    String
  limit     Int
  window    Int      @default(60)
  enabled   Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([endpoint, method])
  @@map("endpoint_rate_limits")
}

model SystemHealthLog {
  id                String   @id @default(cuid())
  cpuUsage          Float
  memoryUsage       Float
  totalMemory       Float
  freeMemory        Float
  uptime            Float
  activeConnections Int
  timestamp         DateTime @default(now())

  @@index([timestamp])
  @@map("system_health_logs")
}

model AuditLog {
  id        String   @id @default(cuid())
  adminId   String
  action    String
  targetId  String?
  details   Json?
  timestamp DateTime @default(now())
  admin     User     @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([timestamp])
  @@map("audit_logs")
}


model TaskRelation {
  id           String           @id @default(cuid())
  sourceTaskId String
  targetTaskId String
  relationType TaskRelationType
  createdAt    DateTime         @default(now())
  createdById  String
  createdBy    User             @relation(fields: [createdById], references: [id])
  sourceTask   Task             @relation("SourceRelations", fields: [sourceTaskId], references: [id], onDelete: Cascade)
  targetTask   Task             @relation("TargetRelations", fields: [targetTaskId], references: [id], onDelete: Cascade)

  @@unique([sourceTaskId, targetTaskId, relationType])
  @@index([sourceTaskId])
  @@index([targetTaskId])
  @@map("task_relations")
}

model TaskTemplate {
  id          String       @id @default(cuid())
  name        String
  description String?
  projectId   String?
  priority    TaskPriority @default(MEDIUM)
  template    Json
  createdById String
  isDefault   Boolean      @default(false)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  createdBy   User         @relation(fields: [createdById], references: [id])
  project     Project?     @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@map("task_templates")
}

model TaskHistory {
  id        String   @id @default(cuid())
  taskId    String
  userId    String
  field     String
  oldValue  String?
  newValue  String?
  createdAt DateTime @default(now())
  task      Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id])

  @@index([taskId])
  @@index([createdAt])
  @@map("task_history")
}

model SavedFilter {
  id        String   @id @default(cuid())
  name      String
  userId    String
  projectId String?
  criteria  Json
  isPublic  Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  project   Project? @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("saved_filters")
}

model NovaInsight {
  id          String      @id @default(cuid())
  userId      String
  type        InsightType
  title       String
  description String
  taskId      String?
  projectId   String?
  actionTaken Boolean     @default(false)
  dismissed   Boolean     @default(false)
  confidence  Float
  metadata    Json?
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  project     Project?    @relation(fields: [projectId], references: [id], onDelete: Cascade)
  task        Task?       @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([type])
  @@index([dismissed])
  @@index([createdAt])
  @@map("nova_insights")
}

model UserAIPreference {
  id                     String   @id @default(cuid())
  userId                 String   @unique
  enableProactiveNotifs  Boolean  @default(true)
  enableAutoEscalation   Boolean  @default(true)
  deadlineWarningDays    Int[]    @default([1, 3, 7])
  preferredInsightTypes  String[] @default(["RISK_DETECTED", "DEADLINE_WARNING", "PATTERN_FOUND"])
  weeklyReportDay        Int?
  weeklyReportTime       String?
  notificationQuietHours Json?
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt
  user                   User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_ai_preferences")
}

model TaskPrediction {
  id                    String    @id @default(cuid())
  taskId                String
  predictedCompletionAt DateTime
  actualCompletionAt    DateTime?
  confidence            Float
  accuracyScore         Float?
  factors               Json
  basedOnSimilarTasks   Int       @default(0)
  userVelocityFactor    Float?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
  task                  Task      @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([createdAt])
  @@map("task_predictions")
}

model AutomationAction {
  id           String         @id @default(cuid())
  type         AutoActionType
  taskId       String?
  userId       String?
  description  String
  success      Boolean
  metadata     Json?
  errorMessage String?
  createdAt    DateTime       @default(now())
  task         Task?          @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user         User?          @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([type])
  @@index([success])
  @@index([createdAt])
  @@map("automation_actions")
}

enum UserRole {
  ADMIN
  MANAGER
  USER
}

enum TaskStatus {
  PENDING
  IN_PROGRESS
  IN_REVIEW
  COMPLETED
  CANCELLED
}

enum TaskPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}



enum TaskRiskLevel {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}



enum NotificationType {
  TASK_ASSIGNED
  TASK_UPDATED
  TASK_COMPLETED
  TASK_CHANGES_REQUESTED
  TASK_APPROVED
  PROJECT_ASSIGNED
  MENTION
  AI_INSIGHT
  DEADLINE_WARNING
  RISK_ALERT
  WEEKLY_SUMMARY
}

enum TaskRelationType {
  PARENT_CHILD
  BLOCKS
  BLOCKED_BY
  RELATES_TO
  DUPLICATES
  DUPLICATE_OF
}

enum InsightType {
  RISK_DETECTED
  DEADLINE_WARNING
  PATTERN_FOUND
  WORKLOAD_IMBALANCE
  TASK_SUGGESTION
  PRODUCTIVITY_TIP
  COMPLETION_PREDICTION
  BUDGET_ALERT
}

enum AutoActionType {
  AUTO_ESCALATE
  AUTO_SUGGEST_SPLIT
  AUTO_PRIORITY_UPDATE
  AUTO_NOTIFICATION
}
